--- a/styles/style.css
+++ b/styles/style.css
@@ -30,10 +30,7 @@
   }
 html{
     font-size: 62.5%;
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-top: 24px;
-    margin-bottom: 24px;
+    
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     box-sizing: border-box;
@@ -45,12 +42,37 @@ body{
 
 .header-back{
     width: 100%;
-    height: 100px;
+    height: 80vh;
     display: flex;
     align-items: center;
+    
+}
+#header {
+    
+   
+    background-image: url('https://e0.pxfuel.com/wallpapers/579/745/desktop-wallpaper-movie-captain-marvel.jpg') ;
+    filter: grayscale(24%);
+    -webkit-filter: grayscale(24%);
+    -moz-filter: grayscale(24%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-clip: border-box;
 }
 .header-back a img{
-    width: 30px;
+    transform: rotate(180deg);
+    position: absolute;
+    top: 24px;
+    left: 24px;
+}
+.header-back  .detail-movie{
+    display: flex;
+}
+.detail-movie div img{
+    width: 180px;
+    height: 400px;
+    filter: grayscale(34%) brightness(113%) saturate(138%) contrast(104%);
+-webkit-filter: grayscale(34%) brightness(113%) saturate(138%) contrast(104%);
+-moz-filter: grayscale(34%) brightness(113%) saturate(138%) contrast(104%);
 }
 .header-search h1{
     font-size: 3.2rem;
@@ -328,3 +350,10 @@ main .main-movies-images .movie-img:hover{
 @media (max-width: 320px) {
    
   }
+
+.bords {
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
