--- a/styles/style.css
+++ b/styles/style.css
@@ -33,11 +33,9 @@ html{
     
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    box-sizing: border-box;
+
 }
 body{
-    box-sizing: border-box;
-    padding-top: 24px;
     
 }
 main{
@@ -46,13 +44,9 @@ main{
 }
 .main-detail-movies{
     width: 100%;
-    height: 80vh;
-    
-    
+    height: 100vh;
 }
 #header {
-    
-   
     background-image: linear-gradient(rgba(0, 0, 0, 0.842), rgba(0, 0, 0, 0.5)),
     url("https://e0.pxfuel.com/wallpapers/579/745/desktop-wallpaper-movie-captain-marvel.jpg");
     background-repeat: no-repeat;
@@ -136,6 +130,59 @@ main{
     margin-bottom: 12px;
     
 }
+ .movies_recomendadas {
+    width: 100%;
+    height: 50vh;
+}
+.movies_recomendadas .title_movie_rec{
+    width: 100%;
+    height: auto;
+    padding-top: 20px;
+}
+.movies_recomendadas .title_movie_rec h2{
+    font-size: 2.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ca0000;
+}
+.movies_recomendadas .img_movies_rec{
+    margin-top: 20px;
+    overflow-x: visible;
+    overflow-y: hidden;
+    white-space: nowrap;
+    height: 341px;
+    padding-bottom: 16px;
+    transition: all .5s;
+    
+}
+.movies_recomendadas .img_movies_rec .movie-container{
+    display: inline-block;
+    margin-right: 36px;
+}
+.movies_recomendadas .img_movies_rec img{
+    height: 325px;
+    min-height: 325px;
+    max-height: 325px;
+    width: 210px;
+    min-width: 210px;
+    max-width: 210px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
+    cursor: pointer;
+    transition-duration: 300ms;
+    transition-property: transform, box-shadow;
+    transition-timing-function: ease-out .5s;
+    -webkit-font-smoothing: subpixel-antialiased;
+    transition: border 100ms ease-out 0s;
+}
+
+
+
+
+
+
+
 .header-search h1{
     font-size: 3.2rem;
     margin-bottom: 12px;
@@ -245,7 +292,7 @@ main .main-section-movies .main-section-movies-tittles button:hover{
 }
 main .main-movies-images{
     margin-top: 20px;
-    overflow-x: hidden;
+    overflow-x: visible;
     overflow-y: hidden;
     white-space: nowrap;
     height: 341px;
@@ -344,18 +391,19 @@ main .movie-container .movie-img:hover{
     font-size: 2.4rem;
 }
 .category-container {
-    width: 150px;
+    width: 175px;
+    max-width: 180px;
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.69) 0px 16px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
     cursor: pointer;
     margin-top: 8px;
     margin-bottom: 8px;
-    margin-left: 12px;
-    margin-left: 12px;
     transition: all .5s;
     display: flex;
     align-items: center;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.137);
+    color: black;
   }
 .categories-list{
     display: flex;
@@ -384,6 +432,9 @@ main .movie-container .movie-img:hover{
     margin-right: 8px;
     width: 8px;
     height: 8px;
+  }
+  .genre {
+    width: 100%;
   }
 #id28 { --idColor: var(--yellow); }
 #id12 { --idColor: var(--red); }
